Fix docker image build and docker compose file