@@ -6,7 +6,6 @@ buildscript {
 
 		propdepsPluginVer = '0.0.10.RELEASE'
 		versionPluginVer = '0.17.0'
-		dockerPluginVer = '0.13.0'
 
 		junitJupiterVer = '5.0.2'
 		junitPlatformVer = '1.0.2'
@@ -26,7 +25,6 @@ buildscript {
 		classpath "io.spring.gradle:propdeps-plugin:$propdepsPluginVer"
 		// gradle dependencyUpdates -Drevision=release
 		classpath "com.github.ben-manes:gradle-versions-plugin:$versionPluginVer"
-		classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:$dockerPluginVer"
 	}
 }
 
@@ -39,7 +37,6 @@ apply plugin: 'propdeps'
 apply plugin: 'propdeps-idea'
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'com.palantir.docker'
 
 repositories {
 	jcenter()
@@ -103,19 +100,24 @@ task wrapper(type: Wrapper) {
 	distributionType = Wrapper.DistributionType.ALL
 }
 
-// https://github.com/palantir/gradle-docker
-// gradle docker
-docker {
-	dependsOn tasks.bootJar
-	name 'app'
-	tags 'latest'
-	files tasks.bootJar.outputs
-	dockerfile file('src/main/docker/Dockerfile')
-	buildArgs([
-		JAVA_OPTS: '-XX:-TieredCompilation -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1',
-		PORT     : '8080'
-	])
-	pull true
+task docker(dependsOn: tasks.bootJar) {
+	def tag = 'app'
+	def workDir = file("$buildDir/docker")
+	def dockerFile = file('src/main/docker/Dockerfile')
+	def inputDir = file("$buildDir/libs")
+
+	doLast {
+		copy {
+			from inputDir
+			from dockerFile
+			into workDir
+		}
+
+		exec {
+			workingDir workDir
+			commandLine 'docker', 'build', '--pull', '-t', tag, '.'
+		}
+	}
 }
 
 task stage(dependsOn: ['build', 'clean'])
